<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbCoppa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coppa" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbGdpr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/gdpr" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbConsent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consent" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/us_privacy_string">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUSPrivacyString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bInitialize"
            style="@style/MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"
            android:text="@string/initialize"
            android:textSize="@dimen/button_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadBanner"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/load_banner"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowBanner"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/show_banner"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadInterstitial"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/load_interstitial"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowInterstitial"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/show_interstitial"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadRewarded"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/load_rewarded"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowRewarded"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/show_rewarded"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bLoadNative"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/load_native"
                android:textSize="@dimen/button_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bShowNative"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/show_native"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/adContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

</ScrollView>